--- a/src/app/frend/frend-list/frend-list.component.scss
+++ b/src/app/frend/frend-list/frend-list.component.scss
@@ -18,3 +18,15 @@
         padding-right: 5px;
     }
 }
+
+.red-icon {
+    color: red;
+}
+
+.gren-icon {
+    color: green;
+}
+
+.yellow-icon {
+    color: yellow;
+}
