--- a/src/app/frend/frend/frend.component.html
+++ b/src/app/frend/frend/frend.component.html
@@ -11,6 +11,6 @@
 
     <frend-list
         [frendList]="myFrends"
-        (deleteFrendEvent)="onDeleteFrend($event)"></frend-list>
+        (changeFrendStatus)="onChangeFrendStatus($event)"></frend-list>
     
 </div>
