Added Icons to Bricks

--- a/src/app/brickType/brick-type-list/brick-type-list.component.html
+++ b/src/app/brickType/brick-type-list/brick-type-list.component.html
@@ -1,9 +1,10 @@
 
 <div class="brick-type-list">
-  <button mat-raised-button class="brick-type-button text-shadow"
+    <button mat-raised-button class="brick-type-button text-shadow"
         *ngFor="let brickType of brickTypes" 
         [ngStyle]="{'background-color': brickType.category.color}"
         (click)="selectBrickType(brickType)">
-    {{brickType.sign}} 
+    <mat-icon *ngIf="brickType.isIcon">{{brickType.sign}} </mat-icon>
+    <div *ngIf="!brickType.isIcon">{{brickType.sign}}</div> 
 </button>
 </div>
