--- a/src/styles.scss
+++ b/src/styles.scss
@@ -387,3 +387,9 @@ $hexagon-index: 1;
     border-radius: 3px;
     box-sizing: border-box;
 }
+
+.brickIcon{
+    font-size: 18px;
+    padding-left: 4px;
+    padding-top: 3px;
+}
