--- a/src/app/brickType/brick-type-details/brick-type-details.component.html
+++ b/src/app/brickType/brick-type-details/brick-type-details.component.html
@@ -15,10 +15,31 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-
+        
     <mat-form-field>
-        <input type="sign" matInput required placeholder="{{'Step2.SkillSign' | translate}}" formControlName="sign">
+            <!-- {{brickTypeDetailsForm.controls.isIcon.value}} -->
+            <mat-icon *ngIf="brickTypeDetailsForm && brickTypeDetailsForm.controls.isIcon.value">
+                {{brickTypeDetailsForm.controls.sign.value}}
+            </mat-icon>
+            <input type="text" placeholder="{{'Step2.SkillSign' | translate}}"
+                class="inputIconControl" formControlName="sign"
+                matInput  [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="getDisplayFn()">
+                <mat-option *ngFor="let icon of frendsIconListResult" [value]="icon">
+                    <mat-icon>{{icon}}</mat-icon><span> {{icon}}</span>
+                </mat-option>
+            </mat-autocomplete>
+        <!-- <mat-select placeholder="{{'Step2.SkillSign' | translate}}" matInput required formControlName="signSymbol">
+            <mat-option *ngFor="let icon of iconList"
+                        [value]="icon">
+                <mat-icon>{{icon}}</mat-icon><span> {{icon}}</span>
+            </mat-option>
+        </mat-select> -->
     </mat-form-field>
+
+    <!-- <mat-form-field>
+        <input type="sign" matInput required placeholder="{{'Step2.SkillSign' | translate}}" formControlName="sign">
+    </mat-form-field> -->
   
     <mat-form-field>
         <textarea matInput placeholder="{{'Step2.SkillDescriptionPlaceholder' | translate}}" formControlName="ruleDescription"></textarea>
