--- a/src/app/brickType/brick-type-list/brick-type-list.component.scss
+++ b/src/app/brickType/brick-type-list/brick-type-list.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    mat-icon{
+        font-size: 20px;
+    }
 }
 
 .brick-type-button {
