Worked with FrendList and Modal Brcik adding

--- a/src/app/brick/brick-modal/brick-modal.component.html
+++ b/src/app/brick/brick-modal/brick-modal.component.html
@@ -8,10 +8,19 @@
       <mat-select placeholder="Привычка" matInput required formControlName="brickType">
         <mat-option *ngFor="let brickType of existentBrickTypes"
                     [value]="brickType._id">
-          <div class="color-list-option">
-            <div class="small-brick-type" [ngStyle]="{'background-color':brickType.category.color}"></div>
-            <div>{{ brickType.name }}</div>   
-          </div>
+            <div class="color-list-option">
+                <!-- <div class="small-brick-type" [ngStyle]="{'background-color':brickType.category.color}"></div>
+                <div>{{ brickType.name }}</div>    -->
+                <span class="brick-in-calendar text-shadow brick-in-option" 
+                    [ngStyle]="{'background-color': brickType.category.color}">
+                    <mat-icon *ngIf="brickType.isIcon"  
+                                class="brickIcon">
+                        {{brickType.sign}} 
+                    </mat-icon>
+                    <div *ngIf="!brickType.isIcon">{{brickType.sign}}</div> 
+                </span>
+                <div>{{ brickType.name }}</div>
+            </div>
         </mat-option>
       </mat-select>
     </mat-form-field>
