--- a/src/app/frend/frend-list/frend-list.component.scss
+++ b/src/app/frend/frend-list/frend-list.component.scss
@@ -17,16 +17,7 @@
         padding-left: 5px;
         padding-right: 5px;
     }
-}
-
-.red-icon {
-    color: red;
-}
-
-.gren-icon {
-    color: green;
-}
-
-.yellow-icon {
-    color: yellow;
+    td:first-child{
+        width: 20px;
+    }
 }
