--- a/src/app/brickType/brick-type-details/brick-type-details.component.html
+++ b/src/app/brickType/brick-type-details/brick-type-details.component.html
@@ -2,6 +2,9 @@
   <form [formGroup]="brickTypeDetailsForm" class="brick-type-form" >
     <mat-form-field>
       <input matInput required placeholder="{{'Step2.SkillName' | translate}}" formControlName="name">
+      <mat-error >
+        Название обязательно для заполнения
+    </mat-error>
     </mat-form-field>
 
     <mat-form-field>
@@ -9,11 +12,14 @@
             <mat-option *ngFor="let category of categoriesList"
                         [value]="category._id">
             <div class="color-list-option">
-                <div class="small-brick-type" [ngStyle]="{'background-color':category.color}"></div>
+                <div class="small-brick-type brick-in-option" [ngStyle]="{'background-color':category.color}"></div>
                 <div>{{ category.name }}</div>   
             </div>
             </mat-option>
         </mat-select>
+        <mat-error >
+            Сфера влияния обязательна для заполнения
+        </mat-error>
     </mat-form-field>
         
     <mat-form-field>
@@ -22,13 +28,23 @@
                 {{brickTypeDetailsForm.controls.sign.value}}
             </mat-icon>
             <input type="text" placeholder="{{'Step2.SkillSign' | translate}}"
-                class="inputIconControl" formControlName="sign"
+                class="inputIconControl" formControlName="sign" required
                 matInput  [matAutocomplete]="auto">
             <mat-autocomplete #auto="matAutocomplete" [displayWith]="getDisplayFn()">
                 <mat-option *ngFor="let icon of frendsIconListResult" [value]="icon">
                     <mat-icon>{{icon}}</mat-icon><span> {{icon}}</span>
                 </mat-option>
             </mat-autocomplete>
+            
+            <div class="mat-error-custom" *ngIf="brickTypeDetailsForm.controls && 
+                            brickTypeDetailsForm.controls.sign.value && 
+                            !brickTypeDetailsForm.controls.isIcon.value && 
+                            brickTypeDetailsForm.controls.sign.value.length > 2">
+                Укажите иконку или 2 символа
+            </div>
+            <mat-error >
+                    Выберите иконку или введите не более 2 символов
+            </mat-error>
         <!-- <mat-select placeholder="{{'Step2.SkillSign' | translate}}" matInput required formControlName="signSymbol">
             <mat-option *ngFor="let icon of iconList"
                         [value]="icon">
@@ -36,7 +52,6 @@
             </mat-option>
         </mat-select> -->
     </mat-form-field>
-
     <!-- <mat-form-field>
         <input type="sign" matInput required placeholder="{{'Step2.SkillSign' | translate}}" formControlName="sign">
     </mat-form-field> -->
@@ -51,12 +66,20 @@
 
     <div class="button-container">
       <button mat-raised-button color="primary" 
-              [disabled]='brickTypeDetailsForm.invalid'
+              [disabled]='brickTypeDetailsForm.invalid ||
+                (brickTypeDetailsForm.controls && 
+                brickTypeDetailsForm.controls.sign.value && 
+                !brickTypeDetailsForm.controls.isIcon.value && 
+                brickTypeDetailsForm.controls.sign.value.length > 2)'
               *ngIf="!brickType"
               (click)="createBrickType()">{{'Add' | translate}}</button>
       <button mat-raised-button color="primary" 
               *ngIf="brickType && brickType._id"
-              [disabled]='brickTypeDetailsForm.invalid'
+              [disabled]='brickTypeDetailsForm.invalid ||
+                (brickTypeDetailsForm.controls && 
+                brickTypeDetailsForm.controls.sign.value && 
+                !brickTypeDetailsForm.controls.isIcon.value && 
+                brickTypeDetailsForm.controls.sign.value.length > 2)'
               (click)="updateBrickType()">{{'Update' | translate}}</button>
         <button mat-raised-button color="warn" 
                 *ngIf="brickType && brickType._id"
