--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,6 +122,10 @@ body {
     line-height: 40px!important;
 }
 
+.mat-selected{
+    background: rgba(0, 0, 0, 0.12)!important;
+}
+
 // ==================================== LIST WITH SMALL COLOR brick =============================
 .small-brick-type {
     //margin: 9px 10px;
