--- a/src/app/category/category-details/category-details.component.scss
+++ b/src/app/category/category-details/category-details.component.scss
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
+    margin-left: -15px;
 }
 
 .button-container button{
