--- a/src/app/components/dialogs/bottom-sheet/bottom-sheet.component.html
+++ b/src/app/components/dialogs/bottom-sheet/bottom-sheet.component.html
@@ -2,8 +2,8 @@
     <div class="logo-container">
 
     </div>
-    <div class="advice-container">
-        {{data.message}}
+    <div class="advice-container"
+        [innerHTML]="data.message">
     </div>
 </div>
 
