--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,6 +77,10 @@ body {
         font-size: 18px;
     }
 }
+// ================================== mat-checkbox ==================================
+.mat-checkbox-frame{
+    border-color: white!important;
+}
 // =============================== .mat-bottom-sheet-container ======================
 .mat-bottom-sheet-container{
     // background: #fffaca!important;
@@ -440,4 +444,8 @@ $hexagon-index: 1;
     font-weight: 400;
     line-height: 1.125;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+} 
+// ======================== COLORS ====================
+.chocolate{
+    color: chocolate;
 }
