--- a/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.html
+++ b/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.html
@@ -27,7 +27,7 @@
             <!-- BrickType Name  -->
             <div class="card-brick-type-name text-shadow">
                 {{brickType.name}}
-                <div *ngIf="brickType.isRemoved">
+                <div *ngIf="brickType.status == 2">
                     (Удалена)
                 </div>
             </div>
