Changed update and delete bricks

--- a/src/app/brick/brick-modal/brick-modal.component.html
+++ b/src/app/brick/brick-modal/brick-modal.component.html
@@ -43,26 +43,20 @@
         </mat-select> -->
 
         
-            <mat-select placeholder="Привычка" formControlName="brickType" multiple>
-                <mat-select-trigger *ngIf="brickDetailsForm.value.brickType && brickDetailsForm.value.brickType?.length > 0">   
-                    <!-- {{brickDetailsForm.value.brickType ? brickDetailsForm.value.brickType[0].name : ''}}
-                    <span *ngIf="brickDetailsForm.value.brickType?.length > 1" class="example-additional-selection">
-                        (+{{brickDetailsForm.value.brickType.length - 1}} {{brickDetailsForm.value.brickType?.length === 2 ? 'other' : 'others'}})
-                    </span> -->
+            <mat-select placeholder="Привычка" formControlName="brickType">
+                <mat-select-trigger *ngIf="brickDetailsForm.value.brickType">   
                     <div class="bricks-container" >
                         <span class="text-shadow"
-                            *ngFor="let curSelBrick of brickDetailsForm.value.brickType"
-                            [ngClass]="{'brick-in-calendar': !curSelBrick.type || curSelBrick.type == 1, 'brick-in-calendar-arrow': curSelBrick.type == 2}"
-                            [ngStyle]="{'background-color': curSelBrick.category.color}">
-                            <mat-icon *ngIf="curSelBrick.isIcon "  
+                            [ngClass]="{'brick-in-calendar': !brickDetailsForm.value.brickType.type || brickDetailsForm.value.brickType.type == 1, 'brick-in-calendar-arrow': brickDetailsForm.value.brickType.type == 2}"
+                            [ngStyle]="{'background-color': brickDetailsForm.value.brickType.category.color}">
+                            <mat-icon *ngIf="brickDetailsForm.value.brickType.isIcon "  
                                         class="brickIcon">
-                                {{curSelBrick.sign}} 
+                                {{brickDetailsForm.value.brickType.sign}} 
                             </mat-icon>
-                            <div *ngIf="!curSelBrick.isIcon">{{curSelBrick.sign}}</div> 
+                            <div *ngIf="!brickDetailsForm.value.brickType.isIcon">{{brickDetailsForm.value.brickType.sign}}</div> 
                         </span>
                     </div>
                 </mat-select-trigger>
-                <!-- <mat-option *ngFor="let brickt of existentBrickTypes" [value]="brickt">{{brickt.name }}</mat-option> -->
                 <mat-option *ngFor="let brityp of existentBrickTypes" [value]="brityp">
                     <div class="color-list-option">
                         <span class="text-shadow brick-in-option" 
@@ -79,15 +73,18 @@
                 </mat-option>
             </mat-select>
 
-        <!-- <mat-select placeholder="Toppings" [formControl]="toppings" multiple>
-                <mat-select-trigger>
-                  {{toppings.value ? toppings.value[0] : ''}}
-                  <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
-                    (+{{toppings.value.length - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
-                  </span>
-                </mat-select-trigger>
-                <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
-              </mat-select> -->
+          
+                <!-- <mat-select placeholder="Toppings" [formControl]="toppings">
+                  <mat-select-trigger>
+                    {{toppings.value ? toppings.value[0] : ''}}
+                    <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
+                      (+{{toppings.value.length - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
+                    </span>
+                  </mat-select-trigger>
+                  <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+                </mat-select> -->
+          
+
     </mat-form-field>
   
     <mat-form-field>
@@ -95,10 +92,10 @@
     </mat-form-field>
 
     <div class="button-container">
-      <button mat-raised-button color="primary" 
+      <!-- <button mat-raised-button color="primary" 
               [disabled]='brickDetailsForm.invalid'
               *ngIf="!data.curBrick || !data.curBrick._id"
-              (click)="createBrick()">{{'Add' | translate}}</button>
+              (click)="createBrick()">{{'Add' | translate}}</button> -->
       <button mat-raised-button color="primary" 
               *ngIf="data.curBrick && data.curBrick._id"
               [disabled]='brickDetailsForm.invalid'
